Update loadClient model and references
